Display inline all form label to ensure vertical alignment

--- a/src/sao.less
+++ b/src/sao.less
@@ -101,6 +101,7 @@
     }
     & label {
         font-weight: normal;
+        display: inline;
     }
     .panel-heading {
         padding: 1px 1px;
